откорректированы переменные, формулы расчетов

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- заголовок страницы, одинаковый на всех страницах -->
@@ -437,12 +437,7 @@
           <!-- оформление секции ввода e-mail -->
           <div class="call-to-sign footer-item">
             <p class="exclamation">Подпишитесь на рассылку</p>
-            <form
-              name="signup-form"
-              class="signup-form"
-              autocomplete="on"
-              
-            >
+            <form name="signup-form" class="signup-form" autocomplete="on">
               <input
                 type="email"
                 name="email"
