--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </head>
   <body>
     <!-- заголовок страницы, одинаковый на всех страницах -->
-    <header class="section header">
+    <header class="section header header--geometry">
       <!-- Раздел навигации по сайту обернут в контейнере "верхняя линия" -->
 
-      <div class="container header-nav">
-        <nav class="sitenav">
+      <div class="container header-navigation">
+        <nav class="navigation-block">
           <a
             class="logo no-line"
             href="WebStudio"
@@ -30,36 +30,36 @@
             ><span class="logo-color">Web</span>Studio</a
           >
 
-          <ul class="sitenav-links no-list link-font">
-            <li class="sitenav-links-item">
+          <ul class="navigation-block no-list link-font">
+            <li class="navigation-block__item">
               <a
-                class="sitenav-link current no-line"
+                class="navigation-block__link current no-line"
                 href="./index.html"
                 title="Переход на главнцю страницу сайта"
               >
                 Студия</a
               >
             </li>
-            <li class="sitenav-links-item">
-              <a class="sitenav-link no-line" href="./portfolio.html"
+            <li class="navigation-block__item">
+              <a class="navigation-block__link no-line" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="sitenav-links-item">
-              <a class="sitenav-link no-line" href="#">Контакты</a>
+            <li class="navigation-block__item">
+              <a class="navigation-block__link no-line" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
 
         <!-- адресные ссылки -->
-        <div class="header-links link-font">
-          <a class="header-link no-line" href="mailto:info@devstudio.com">
+        <div class="contacts link-font">
+          <a class="contacts_link no-line" href="mailto:info@devstudio.com">
             <svg class="e-mail">
               <use href="./images/svg/icons.svg#envelope"></use>
             </svg>
             info@devstudio.com</a
           >
-          <a class="header-link no-line" href="+380961111111">
+          <a class="contacts_link no-line" href="+380961111111">
             <svg class="smartphone">
               <use href="./images/svg/icons.svg#smartphone"></use>
             </svg>
