--- a/portfolio.html
+++ b/portfolio.html
@@ -77,48 +77,47 @@
           <h1 class="visually-hidden">Портфолио компании</h1>
 
           <!-- фильтр переходов внутри сайта -->
-          <div class="navigation">
-            <ul class="navigation-btns no-list">
-              <li class="navigation-item">
-                <button type="button" class="btn btn-hover btn-focus">
-                  Все
-                </button>
-              </li>
-              <li class="navigation-item">
-                <button type="button" class="btn btn-hover btn-focus">
-                  Веб-сайты
-                </button>
-              </li>
-              <li class="navigation-item">
-                <button type="button" class="btn btn-hover btn-focus">
-                  Приложения
-                </button>
-              </li>
-              <li class="navigation-item">
-                <button type="button" class="btn btn-hover btn-focus">
-                  Дизайн
-                </button>
-              </li>
-              <li class="navigation-item">
-                <button type="button" class="btn btn-hover btn-focus">
-                  Маркетинг
-                </button>
-              </li>
-            </ul>
-          </div>
+
+          <ul class="navigation no-list">
+            <li class="navigation__item">
+              <button type="button" class="navigation__btn btn-hover btn-focus">
+                Все
+              </button>
+            </li>
+            <li class="navigation__item">
+              <button type="button" class="navigation__btn btn-hover btn-focus">
+                Веб-сайты
+              </button>
+            </li>
+            <li class="navigation__item">
+              <button type="button" class="navigation__btn btn-hover btn-focus">
+                Приложения
+              </button>
+            </li>
+            <li class="navigation__item">
+              <button type="button" class="navigation__btn btn-hover btn-focus">
+                Дизайн
+              </button>
+            </li>
+            <li class="navigation__item">
+              <button type="button" class="navigation__btn btn-hover btn-focus">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
 
           <!-- раздел Наши работы, ссылки на описание проектов -->
           <h2 class="visually-hidden">Описание работ компании в портфолио</h2>
-          <ul class="description no-list">
-            <li class="description-item">
+          <ul class="our-projects no-list">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
-                  <div class="overlay">
-                    <p class="overlay-text">
+                <div class="box-overaly">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -139,21 +138,21 @@
               </a>
             </li>
 
-            <li class="description-item">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
+                <div class="box-overaly">
                   <img
                     class="portfolio-img"
                     src="./images/portfolio/NO_GS(1).jpg"
                     alt="Постер New Orlean против Golden Star"
                     width="370"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -171,15 +170,15 @@
               </a>
             </li>
 
-            <li class="description-item">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
-                  <div class="overlay">
-                    <p class="overlay-text">
+                <div class="box-overaly">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -201,15 +200,15 @@
               </a>
             </li>
 
-            <li class="description-item">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
-                  <div class="overlay">
-                    <p class="overlay-text">
+                <div class="box-overaly">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -231,15 +230,15 @@
               </a>
             </li>
 
-            <li class="description-item">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
-                  <div class="overlay">
-                    <p class="overlay-text">
+                <div class="box-overaly">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -261,15 +260,15 @@
               </a>
             </li>
 
-            <li class="description-item">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
-                  <div class="overlay">
-                    <p class="overlay-text">
+                <div class="box-overaly">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -292,15 +291,15 @@
               </a>
             </li>
 
-            <li class="description-item">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
-                  <div class="overlay">
-                    <p class="overlay-text">
+                <div class="box-overaly">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -325,15 +324,15 @@
               </a>
             </li>
 
-            <li class="description-item">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
-                  <div class="overlay">
-                    <p class="overlay-text">
+                <div class="box-overaly">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -355,15 +354,15 @@
               </a>
             </li>
 
-            <li class="description-item">
+            <li class="our-projects-item">
               <a
-                class="description-link no-line"
+                class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overlay">
-                  <div class="overlay">
-                    <p class="overlay-text">
+                <div class="box-overaly">
+                  <div class="box-overaly__item">
+                    <p class="box-overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
