CSS разметка вынесена в SASS

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+    /> -->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -96,30 +96,30 @@
         <div class="container">
           <h2 class="visually-hidden">Приоритеты компании</h2>
           <ul class="priorities no-list">
-            <li class="priorities__item icon-details">
+            <li class="priorities__item priorities__icon-details">
               <h3 class="priorities__header">Внимание к деталям</h3>
-              <p>
+              <p class="priorities__text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="priorities__item icon-timeliness">
+            <li class="priorities__item priorities__icon-timeliness">
               <h3 class="priorities__header">Пунктуальность</h3>
-              <p>
+              <p class="priorities__text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="priorities__item icon-planning">
+            <li class="priorities__item priorities__icon-planning">
               <h3 class="priorities__header">Планирование</h3>
-              <p>
+              <p class="priorities__text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="priorities__item icon-technology">
+            <li class="priorities__item priorities__icon-technology">
               <h3 class="priorities__header">Современные технологии</h3>
-              <p>
+              <p class="priorities__text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -669,10 +669,7 @@
             <a class="form-check__link" href="#">Условия договора</a>
           </label>
 
-          <button
-            type="submit"
-            class="registration-form-send btn btn-hover btn-focus"
-          >
+          <button type="submit" class="form-send btn btn-hover btn-focus">
             Отправить
           </button>
         </div>
