--- a/portfolio.html
+++ b/portfolio.html
@@ -80,44 +80,34 @@
 
           <ul class="navigation no-list">
             <li class="navigation__item">
-              <button type="button" class="navigation__btn btn-hover btn-focus">
-                Все
-              </button>
+              <button type="button" class="navigation__btn">Все</button>
             </li>
             <li class="navigation__item">
-              <button type="button" class="navigation__btn btn-hover btn-focus">
-                Веб-сайты
-              </button>
+              <button type="button" class="navigation__btn">Веб-сайты</button>
             </li>
             <li class="navigation__item">
-              <button type="button" class="navigation__btn btn-hover btn-focus">
-                Приложения
-              </button>
+              <button type="button" class="navigation__btn">Приложения</button>
             </li>
             <li class="navigation__item">
-              <button type="button" class="navigation__btn btn-hover btn-focus">
-                Дизайн
-              </button>
+              <button type="button" class="navigation__btn">Дизайн</button>
             </li>
             <li class="navigation__item">
-              <button type="button" class="navigation__btn btn-hover btn-focus">
-                Маркетинг
-              </button>
+              <button type="button" class="navigation__btn">Маркетинг</button>
             </li>
           </ul>
 
           <!-- раздел Наши работы, ссылки на описание проектов -->
           <h2 class="visually-hidden">Описание работ компании в портфолио</h2>
           <ul class="our-projects no-list">
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                <div class="overaly">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -131,28 +121,28 @@
                     width="370"
                   />
                 </div>
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">Технокряк</h3>
-                  <p>Веб-сайт</p>
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">Технокряк</h3>
+                  <p class="our-projects__item-title">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
+                <div class="overaly">
                   <img
                     class="portfolio-img"
                     src="./images/portfolio/NO_GS(1).jpg"
                     alt="Постер New Orlean против Golden Star"
                     width="370"
                   />
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -161,24 +151,24 @@
                   </div>
                 </div>
 
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">
                     Постер New Orlean vs Golden Star
                   </h3>
-                  <p>Дизайн</p>
+                  <p class="our-projects__item-title">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                <div class="overaly">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -193,22 +183,22 @@
                   />
                 </div>
 
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">Ресторан Seafood</h3>
-                  <p>Приложение</p>
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">Ресторан Seafood</h3>
+                  <p class="our-projects__item-title">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                <div class="overaly">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -223,22 +213,22 @@
                   />
                 </div>
 
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">Проект Prime</h3>
-                  <p>Маркетинг</p>
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">Проект Prime</h3>
+                  <p class="our-projects__item-title">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                <div class="overaly">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -253,22 +243,22 @@
                   />
                 </div>
 
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">Проект Boxes</h3>
-                  <p>Приложение</p>
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">Проект Boxes</h3>
+                  <p class="our-projects__item-title">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                <div class="overaly">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -282,24 +272,24 @@
                     width="370"
                   />
                 </div>
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">
                     Inspiration has no Borders
                   </h3>
-                  <p>Веб-сайт</p>
+                  <p class="our-projects__item-title">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                <div class="overaly">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -315,24 +305,24 @@
                   />
                 </div>
 
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">
                     Издание Limited Edition
                   </h3>
-                  <p>Дизайн</p>
+                  <p class="our-projects__item-title">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                <div class="overaly">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -347,22 +337,22 @@
                   />
                 </div>
 
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">Проект LAB</h3>
-                  <p>Маркетинг</p>
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">Проект LAB</h3>
+                  <p class="our-projects__item-title">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="our-projects-item">
+            <li class="our-projects__item">
               <a
                 class="our-projects__link no-line"
                 href="#"
                 rel="noopener noreferrer nofollow"
               >
-                <div class="box-overaly">
-                  <div class="box-overaly__item">
-                    <p class="box-overaly__text">
+                <div class="overaly">
+                  <div class="overaly__item">
+                    <p class="overaly__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые серверы
@@ -377,9 +367,9 @@
                   />
                 </div>
 
-                <div class="portfolio-img-title">
-                  <h3 class="decription-item-header">Growing Business</h3>
-                  <p>Приложение</p>
+                <div class="our-projects__item-decription">
+                  <h3 class="our-projects__item-heading">Growing Business</h3>
+                  <p class="our-projects__item-title">Приложение</p>
                 </div>
               </a>
             </li>
@@ -413,28 +403,28 @@
               >
             </address>
           </div>
-          <div class="social footer__item">
-            <p class="social__appeal">присоединяйтесь</p>
+          <div class="join-us footer__item">
+            <p class="join-us__appeal">присоединяйтесь</p>
             <a
-              class="social__link instagram no-line"
+              class="join-us__link instagram no-line"
               href="https://www.instagram.com"
               target="_blank"
               rel="noopener noreferer nofollow"
             ></a>
             <a
-              class="social__link twitter no-line"
+              class="join-us__link twitter no-line"
               href="https://twitter.com"
               target="_blank"
               rel="noopener noreferer nofollow"
             ></a>
             <a
-              class="social__link facebook no-line"
+              class="join-us__link facebook no-line"
               href="https://www.facebook.com"
               target="_blank"
               rel="noopener noreferer nofollow"
             ></a>
             <a
-              class="social__link linkedin no-line"
+              class="join-us__link linkedin no-line"
               href="https://www.linkedin.com"
               target="_blank"
               rel="noopener noreferer nofollow"
