--- a/index.html
+++ b/index.html
@@ -540,28 +540,28 @@
               >
             </address>
           </div>
-          <div class="social footer__item">
-            <p class="social__appeal">присоединяйтесь</p>
+          <div class="join-us footer__item">
+            <p class="join-us__appeal">присоединяйтесь</p>
             <a
-              class="social__link instagram no-line"
+              class="join-us__link instagram no-line"
               href="https://www.instagram.com"
               target="_blank"
               rel="noopener noreferer nofollow"
             ></a>
             <a
-              class="social__link twitter no-line"
+              class="join-us__link twitter no-line"
               href="https://twitter.com"
               target="_blank"
               rel="noopener noreferer nofollow"
             ></a>
             <a
-              class="social__link facebook no-line"
+              class="join-us__link facebook no-line"
               href="https://www.facebook.com"
               target="_blank"
               rel="noopener noreferer nofollow"
             ></a>
             <a
-              class="social__link linkedin no-line"
+              class="join-us__link linkedin no-line"
               href="https://www.linkedin.com"
               target="_blank"
               rel="noopener noreferer nofollow"
