выполнено оформление SASS

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,13 +54,13 @@
 
         <!-- адресные ссылки -->
         <div class="contacts link-font">
-          <a class="contacts_link no-line" href="mailto:info@devstudio.com">
+          <a class="contacts__link no-line" href="mailto:info@devstudio.com">
             <svg class="e-mail">
               <use href="./images/svg/icons.svg#envelope"></use>
             </svg>
             info@devstudio.com</a
           >
-          <a class="contacts_link no-line" href="+380961111111">
+          <a class="contacts__link no-line" href="+380961111111">
             <svg class="smartphone">
               <use href="./images/svg/icons.svg#smartphone"></use>
             </svg>
