--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
             <span class="form-check__agreement"
               >Соглашаюсь с рассылкой и принимаю</span
             >
-            <a class="form-check__link" href="#">Условия договора</a>
+            <a class="form-check__link no-line" href="#">Условия договора</a>
           </label>
 
           <button type="submit" class="form-send btn btn-hover btn-focus">
