откорректирована секция Header & current_underline перемещена в components

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- заголовок страницы, одинаковый на всех страницах -->
-    <header class="section header header--geometry">
+    <header class="section header ">
       <!-- Раздел навигации по сайту обернут в контейнере "верхняя линия" -->
 
       <div class="container header-navigation">
