--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@
               type="text"
               name="name-input"
               id="client-name"
+              pattern="^[A-Za-zА-Яа-яЁё\s]+$"
               required
               class="label__input-field"
             /><svg class="label__icon" width="18" height="18">
@@ -624,6 +625,7 @@
               type="tel"
               name="phone-input"
               id="client-tel"
+              pattern="[0-9]{10}"
               required
               class="label__input-field"
             />
